--- a/Tic-Tac-Toe.html
+++ b/Tic-Tac-Toe.html
@@ -9,44 +9,47 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.21.1/babel.min.js"></script>
 
 <script type="text/babel">
-
 function Square(props) {
+  const className = 'square' + (props.highlight ? ' highlight' : '');
   return (
-    <button className="square" onClick={props.onClick} style={{height: '90px', width : '120px'}} >
+    <button
+      className={className}
+      onClick={props.onClick}
+      style={{height: '90px', width : '120px', fontWeight: 'bold', color: 'blue'}}
+      >
       {props.value}
+
     </button>
   );
 }
 
 class Board extends React.Component {
   renderSquare(i) {
+    const winLine = this.props.winLine;
     return (
       <Square
+        key={i}
         value={this.props.squares[i]}
         onClick={() => this.props.onClick(i)}
+        highlight={winLine && winLine.includes(i)}
       />
     );
   }
 
   render() {
+    // Use two loops to make the squares
+    const boardSize = 3;
+    let squares = [];
+    for (let i = 0; i < boardSize; ++i) {
+      let row = [];
+      for (let j = 0; j < boardSize; ++j) {
+        row.push(this.renderSquare(i * boardSize + j));
+      }
+      squares.push(<div key={i} className="board-row">{row}</div>);
+    }
+
     return (
-      <div>
-        <div className="board-row">
-          {this.renderSquare(0)}
-          {this.renderSquare(1)}
-          {this.renderSquare(2)}
-        </div>
-        <div className="board-row">
-          {this.renderSquare(3)}
-          {this.renderSquare(4)}
-          {this.renderSquare(5)}
-        </div>
-        <div className="board-row">
-          {this.renderSquare(6)}
-          {this.renderSquare(7)}
-          {this.renderSquare(8)}
-        </div>
-      </div>
+      <div>{squares}</div>
     );
   }
 }
@@ -61,7 +64,8 @@ class Game extends React.Component {
         }
       ],
       stepNumber: 0,
-      xIsNext: true
+      xIsNext: true,
+      isAscending: true
     };
   }
 
@@ -69,14 +73,16 @@ class Game extends React.Component {
     const history = this.state.history.slice(0, this.state.stepNumber + 1);
     const current = history[history.length - 1];
     const squares = current.squares.slice();
-    if (calculateWinner(squares) || squares[i]) {
+    if (calculateWinner(squares).winner || squares[i]) {
       return;
     }
     squares[i] = this.state.xIsNext ? "X" : "O";
     this.setState({
       history: history.concat([
         {
-          squares: squares
+          squares: squares,
+          // Store the index of the latest moved square
+          latestMoveSquare: i
         }
       ]),
       stepNumber: history.length,
@@ -91,18 +97,33 @@ class Game extends React.Component {
     });
   }
 
+  handleSortToggle() {
+    this.setState({
+      isAscending: !this.state.isAscending
+    });
+  }
+
   render() {
     const history = this.state.history;
-    const current = history[this.state.stepNumber];
-    const winner = calculateWinner(current.squares);
+    const stepNumber = this.state.stepNumber;
+    const current = history[stepNumber];
+    const winInfo = calculateWinner(current.squares);
+    const winner = winInfo.winner;
 
-    const moves = history.map((step, move) => {
+    let moves = history.map((step, move) => {
+      const latestMoveSquare = step.latestMoveSquare;
+      const col = 1 + latestMoveSquare % 3;
+      const row = 1 + Math.floor(latestMoveSquare / 3);
       const desc = move ?
-        'Go to move #' + move :
+        `Go to move #${move} (${col}, ${row})` :
         'Go to game start';
       return (
         <li key={move}>
-          <button onClick={() => this.jumpTo(move)}>{desc}</button>
+          {/* Bold the currently selected item */ }
+          <button
+            className={move === stepNumber ? 'move-list-item-selected' : ''}
+            onClick={() => this.jumpTo(move)}>{desc}
+          </button>
         </li>
       );
     });
@@ -111,7 +132,16 @@ class Game extends React.Component {
     if (winner) {
       status = "Winner: " + winner;
     } else {
-      status = "Next player: " + (this.state.xIsNext ? "X" : "O");
+      if (winInfo.isDraw) {
+        status = "Draw";
+      } else {
+        status = "Next player: " + (this.state.xIsNext ? "X" : "O");
+      }
+    }
+
+    const isAscending = this.state.isAscending;
+    if (!isAscending) {
+      moves.reverse();
     }
 
     return (
@@ -120,10 +150,14 @@ class Game extends React.Component {
           <Board
             squares={current.squares}
             onClick={i => this.handleClick(i)}
+            winLine={winInfo.line}
           />
         </div>
         <div className="game-info">
           <div>{status}</div>
+          <button onClick={() => this.handleSortToggle()}>
+            {isAscending ? 'descending' : 'ascending'}
+          </button>
           <ol>{moves}</ol>
         </div>
       </div>
@@ -131,6 +165,9 @@ class Game extends React.Component {
   }
 }
 
+// ========================================
+
+ReactDOM.render(<Game />, document.getElementById("tic"));
 
 function calculateWinner(squares) {
   const lines = [
@@ -146,18 +183,27 @@ function calculateWinner(squares) {
   for (let i = 0; i < lines.length; i++) {
     const [a, b, c] = lines[i];
     if (squares[a] && squares[a] === squares[b] && squares[a] === squares[c]) {
-      return squares[a];
+      return {
+        winner: squares[a],
+        line: lines[i],
+        isDraw: false,
+      };
     }
   }
-  return null;
+
+  let isDraw = true;
+  for (let i = 0; i < squares.length; i++) {
+    if (squares[i] === null) {
+      isDraw = false;
+      break;
+    }
+  }
+  return {
+    winner: null,
+    line: null,
+    isDraw: isDraw,
+  };
 }
-
-
-
-ReactDOM.render(
-    <Game />,
-    document.getElementById('tic')
-);
 </script>
 </body>
 </html>
